--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
   ],
   "dependencies": {
     "angular": "~1.4.4",
+    "angular-route": "~1.4.4",
+    "angular-ui-utils": "~3.0.0",
     "bootstrap": "~3.3.5",
     "firebase": "~2.2.9",
     "jquery": "~2.1.4",
