--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular": "~1.4.4",
     "angular-route": "~1.4.4",
     "angular-ui-utils": "~3.0.0",
+    "angularfire": "~1.1.2",
     "bootstrap": "~3.3.5",
     "firebase": "~2.2.9",
     "jquery": "~2.1.4",
